# Breep

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
examples/chat/: Makefile  main.cpp
examples/chatv2/: Makefile  main.cpp
include/: basic_network_manager.hpp  basic_peer.hpp  basic_peer_manager.hpp  commands.hpp  exceptions.hpp  invalid_state.hpp  io_manager_base.hpp  local_peer.hpp  local_peer.tpp  network.hpp  network.tpp  network_manager.hpp  network_manager_base.hpp  networking_traits.hpp  peer.hpp  peer.tpp  tcp_nmanager.hpp  udp_nmanager.hpp
include/breep/: basic_network.hpp  basic_peer.hpp  basic_peer_manager.hpp  io_manager_base.hpp  local_peer.hpp  networking_traits.hpp  object_builder.hpp
include/breep/detail/: utils.hpp
include/breep/impl/: basic_peer.tcc  basic_peer_manager.tcc  local_peer.tcc
include/breep/network/: basic_netdata_wrapper.hpp  basic_network.hpp  basic_peer.hpp  basic_peer_manager.hpp  io_manager_base.hpp  local_peer.hpp  packet.hpp  tcp.hpp  typedefs.hpp
include/breep/tcp/: basic_io_manager.hpp
include/breep/udp/: io_manager.hpp
include/breep/util/: deserializer.hpp  exceptions.hpp  (+5 more)
include/detail/: utils.hpp
include/impl/: basic_network_manager.tcc  basic_peer.tcc  basic_peer_manager.tcc  local_peer.tcc  network.tcc  network_manager.tcc  peer.tcc  tcp_nmanager.tcc
include/tcp/: basic_io_manager.hpp  io_manager.hpp  network_manager.hpp
include/udp/: io_manager.hpp  network_manager.hpp
src/: local_peer.cpp  peer.cpp
src/detail/: utils.cpp
tutorials/: 1 - RPS.md  Details.md
tutorials/listings/: RPS-basic-chat.cpp  RPS-chat.cpp  RPS-final.cpp
(+18 files in other folders)
